Cambio MinIO por AWS S3